--- a/shop/templates/courses.html
+++ b/shop/templates/courses.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block title %} All courses {% endblock %}
+
 {% block content %}
 
 <table class="table mt-5 table-bordered table-striped table-hover">
