--- a/news/templates/news/category.html
+++ b/news/templates/news/category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+    <title>{{ category.title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -31,13 +31,13 @@
 </nav>
 
 <div class="container mt-3">
-    <h1>{{title}}</h1>
+
 
     <div class="row">
         <div class="col-md-4">
             <div class="list-group">
                 {% for item in categories %}
-                <a href="category/{{item.pk}}" class="list-group-item list-group-item-action" >
+                <a href="/category/{{item.pk}}" class="list-group-item list-group-item-action" >
 
                    {{item.title}}
                 </a>
