--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,43 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
+{% extends 'base.html' %}
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Добавить новость</a>
-                </li>
+{% block title %}
+    {{ title }} :: {{ block.super }}
+{% endblock%}
 
-            </ul>
-        </div>
-    </div>
-</nav>
+{% block sidebar %}
 
-<div class="container mt-3">
-    <h1>{{title}}</h1>
-
-    <div class="row">
-        <div class="col-md-4">
             <div class="list-group">
                 {% for item in categories %}
-                <a href="category/{{item.pk}}" class="list-group-item list-group-item-action" >
+                <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action" >
 
                    {{item.title}}
                 </a>
@@ -45,12 +16,16 @@
 
 
             </div>
-        </div>
-        <div class="col-md-8">
+
+
+{% endblock %}
+
+{% block content %}
+
             {% for item in news %}
             <div class="card mb-3">
                 <div class="card-header">
-                    Категория : {{ item.category }}
+                    Категория : <a href="{% url 'category' item.pk %}"> {{ item.category }}</a>
                 </div>
                 <div class="card-body">
                     <div class="media">
@@ -74,13 +49,10 @@
             {% empty %}
             <li>Sorry, no athletes in this list.</li>
             {% endfor %}
-        </div>
-    </div>
-</div>
+
+{% endblock %}
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+
+
+
