--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -6,16 +6,7 @@
 
 {% block sidebar %}
 
-            <div class="list-group">
-                {% for item in categories %}
-                <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action" >
-
-                   {{item.title}}
-                </a>
-                {%endfor%}
-
-
-            </div>
+{%include 'inc/_sidebar.html'%}
 
 
 {% endblock %}
@@ -25,7 +16,7 @@
             {% for item in news %}
             <div class="card mb-3">
                 <div class="card-header">
-                    Категория : <a href="{% url 'category' item.pk %}"> {{ item.category }}</a>
+                    Категория : <a href="{{ item.category.get_absolute_url }}"> {{ item.category }}</a>
                 </div>
                 <div class="card-body">
                     <div class="media">
@@ -37,7 +28,7 @@
                         <div class="media-body">
                             <h5 class="card-title">{{ item.title }}</h5>
                             <p class="card-text">{{ item.content | linebreaks }}</p>
-                            <a href="#" class="btn btn-primary">Read more...</a>
+                            <a href="{{item.get_absolute_url}}" class="btn btn-primary">Read more...</a>
                         </div>
                     </div>
 
