--- a/news/templates/news/list_categories.html
+++ b/news/templates/news/list_categories.html
@@ -4,7 +4,11 @@
                 <a href="{{ item.get_absolute_url }}" class="list-group-item list-group-item-action" >
 
                    {{item.title}}
+
+
+                <span class="badge badge-light" style="color:blue">{{item.cnt}}</span>
                 </a>
+
                 {%endfor%}
 
 
