--- a/templates/inc/_sidebar.html
+++ b/templates/inc/_sidebar.html
@@ -1,5 +1,5 @@
 {% load news_tags %}
-
+{% comment %}
             <div class="list-group">
                 <br>
                 {%get_list_categories as categories %}
@@ -13,6 +13,7 @@
 
             </div>
 
-<br>
 
-    {# show_categories arg2="User" #}
+{% endcomment %}
+<br>
+    {% show_categories %}
