--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -16,6 +16,13 @@
                 </li>
                 {% endif %}
             </ul>
-        </div>
+        <span class="navbar-text">
+            {% if request.user.is_authenticated %}
+            Добро пожаловать, {{ user.username }} | <a href="{% url 'logout' %}">Выход</a>
+            {% else %}
+              <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}"> Login</a>
+            {% endif %}
+
+        </span>
     </div>
 </nav
